<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit">

    <EditText
        android:id="@+id/edt_movies_name"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/movie_name"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/edt_authors_movie"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_authors_movie"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/movie_authors"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/edt_about_movies"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_movies_name"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/edt_about_movies"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="start"
        android:hint="@string/about_movies"
        android:importantForAutofill="no"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/edt_movie_date"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_authors_movie"
        app:layout_constraintVertical_weight="1"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/edt_movie_date"
        style="@style/edt_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/movie_date"
        android:importantForAutofill="no"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_edit"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_about_movies"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="150dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_movie_date"
        app:layout_constraintWidth_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>